added jwt authentication

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
-    "@types/express-session": "^1.x.x",
     "@types/faker": "^4.x.x",
+    "@types/jsonwebtoken": "^7.x.x",
     "@types/lodash": "^4.x.x",
     "@types/morgan": "^1.x.x",
     "@types/ms": "^0.x.x",
@@ -21,17 +21,19 @@
     "typescript": "2.x.x"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.x.x",
     "apollo-engine": "^1.x.x",
     "apollo-errors": "^1.x.x",
     "apollo-server": "^0.x.x",
     "argon2": "^0.x.x",
+    "cookie-parser": "^1.x.x",
     "env": "^0.0.2",
-    "express-session": "^1.x.x",
     "graphql-yoga": "^1.x.x",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.x.x",
     "merge-graphql-schemas": "^1.x.x",
     "morgan": "^1.x.0",
-    "ms": "^2.1.1",
+    "ms": "^2.x.x",
     "path": "^0.x.x",
     "pg": "^7.x.x",
     "reflect-metadata": "^0.x.x",
