--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "graphql-code-generator": "^0.x.x",
     "graphql-codegen-typescript-template": "^0.x.x",
     "graphql-request": "^1.x.x",
-    "husky": "^1.x.x",
+    "husky": "^1.0.0-rc.9",
     "jest": "^23.x.x",
     "node-fetch": "^2.x.x",
     "nodemon": "^1.x.x",
