added sleep command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,5 +40,7 @@ jobs:
           name: Run server
           command: yarn start-test
           background: true
+
+      - run: sleep 5000
       - run: yarn test
 
