--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-fetch": "^2.x.x",
     "nodemon": "^1.x.x",
     "rimraf": "^2.x.x",
+    "start-server-and-test": "^1.x.x",
     "ts-jest": "^22.x.x",
     "ts-node": "6.x.x",
     "tslint": "^5.x.x",
@@ -57,7 +58,8 @@
     "test-watch": "jest --watchAll",
     "lint": "tslint -p .",
     "lint-fix": "tslint -p . --fix",
-    "build": "rimraf ./dist && tsc --noImplicitAny false && copyfiles -u 1 src/**/*.graphql dist"
+    "build": "rimraf ./dist && tsc --noImplicitAny false && copyfiles -u 1 src/**/*.graphql dist",
+    "test-cli": "start-server-and-test start http://localhost:4000 test"
   },
   "jest": {
     "transform": {
