fixed test command

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "lint": "tslint -p .",
     "lint-fix": "tslint -p . --fix",
     "build": "rimraf ./dist && tsc --noImplicitAny false && copyfiles -u 1 src/**/*.graphql dist",
-    "test-cli": "start-server-and-test start http://localhost:4000 test"
+    "test-cli": "start-server-and-test start-test http://localhost:4000 test"
   },
   "jest": {
     "transform": {
