--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           name: Run tests
           command: yarn test-cli
    
-  pushToRegistry:
+  deploy:
     docker:
       - image: danutzcodrescu/circle-ci-docker:v2.1 
         aws_auth:
@@ -107,6 +107,6 @@ workflows:
   build_and_deploy:
     jobs:
       - build
-      - pushToRegistry:
+      - deploy:
           requires:
             - build
