--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,43 +4,43 @@
 #
 version: 2
 jobs:
-  build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:8.11
+  # build:
+  #   docker:
+  #     # specify the version you desire here
+  #     - image: circleci/node:8.11
       
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
+  #     # Specify service dependencies here if necessary
+  #     # CircleCI maintains a library of pre-built images
+  #     # documented at https://circleci.com/docs/2.0/circleci-images/
+  #     # - image: circleci/mongo:3.4.4
 
-    working_directory: ~/repo
+  #   working_directory: ~/repo
 
-    steps:
-      - checkout
+  #   steps:
+  #     - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+  #     # Download and cache dependencies
+  #     - restore_cache:
+  #         keys:
+  #         - v1-dependencies-{{ checksum "package.json" }}
+  #         # fallback to using the latest cache if no exact match is found
+  #         - v1-dependencies-
 
-      - run: yarn install
+  #     - run: yarn install
 
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+  #     - save_cache:
+  #         paths:
+  #           - node_modules
+  #         key: v1-dependencies-{{ checksum "package.json" }}
       
-      # decrypt ormconfig file
-      - run: openssl enc -aes-256-cbc -d -in ormconfig.json.enc -out ormconfig.json -k $FILE_PASS
-      # run tests!
-      - run: 
-          name: Run tests
-          command: yarn test-cli
+  #     # decrypt ormconfig file
+  #     - run: openssl enc -aes-256-cbc -d -in ormconfig.json.enc -out ormconfig.json -k $FILE_PASS
+  #     # run tests!
+  #     - run: 
+  #         name: Run tests
+  #         command: yarn test-cli
    
-  deploy:
+  build:
     docker:
       - image: danutzcodrescu/circle-ci-docker:v2.1 
         aws_auth:
@@ -108,6 +108,6 @@ workflows:
   build_and_deploy:
     jobs:
       - build
-      - deploy:
-          requires:
-            - build
+      # - deploy:
+      #     requires:
+      #       - build
