--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "graphql": "^0.x.x",
     "graphql-code-generator": "^0.x.x",
     "graphql-codegen-typescript-template": "^0.x.x",
-    "graphql-request": "^1.x.x",
     "husky": "^1.0.0-rc.9",
     "jest": "^23.x.x",
     "node-fetch": "^2.x.x",
     "nodemon": "^1.x.x",
+    "prettier": "^1.13.7",
     "rimraf": "^2.6.2",
     "start-server-and-test": "^1.x.x",
     "ts-jest": "^22.x.x",
@@ -38,6 +38,7 @@
     "apollo-server": "^0.x.x",
     "argon2": "^0.x.x",
     "cookie-parser": "^1.x.x",
+    "date-fns": "^1.x.x",
     "env": "^0.0.2",
     "graphql-yoga": "^1.x.x",
     "jsonwebtoken": "^8.x.x",
@@ -55,10 +56,11 @@
     "start-prod": "node ./src/index",
     "start-test": "NODE_ENV=test nodemon --exec ts-node src/index.ts",
     "schema-types": "gql-gen --schema http://localhost:4000 --template graphql-codegen-typescript-template --out ./src/types/schemas/index.d.ts \"./src/**/*.graphql\"",
-    "test": "jest",
-    "test-watch": "jest --watchAll",
+    "test": "NODE_ENV=test jest",
+    "test-watch": "NODE_ENV=test jest --watchAll --runInBand",
     "lint": "tslint -p .",
     "lint-fix": "tslint -p . --fix",
+    "style-format": "prettier --list-different",
     "build": "rimraf ./dist && tsc --noImplicitAny false && copyfiles -u 1 src/**/*.graphql dist",
     "test-cli": "start-server-and-test start-test http://localhost:4000 test"
   },
@@ -74,17 +76,17 @@
       "jsx",
       "json",
       "node"
-    ]
+    ],
+    "testEnvironment": "node"
   },
   "nodemonConfig": {
     "ignore": [
       "*.spec.ts"
-    ],
-    "ext": "*.pde"
+    ]
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run lint"
+      "pre-commit": "yarn run lint && yarn run style-format"
     }
   }
 }
