--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "test-watch": "NODE_ENV=test jest --watchAll --runInBand",
     "lint": "tslint -p .",
     "lint-fix": "tslint -p . --fix",
-    "style-format": "prettier --list-different",
+    "style-format": "prettier --list-different src/**/*",
     "build": "rimraf ./dist && tsc --noImplicitAny false && copyfiles -u 1 src/**/*.graphql dist",
     "test-cli": "start-server-and-test start-test http://localhost:4000 test"
   },
@@ -86,7 +86,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run lint && yarn run style-format"
+      "pre-commit": "yarn run lint"
     }
   }
 }
