small refactoring around cookies and jwt

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/ms": "^0.x.x",
     "@types/node": "^8.x.x",
     "axios": "^0.x.x",
-    "copyfiles": "^2.0.0",
+    "copyfiles": "^2.x.x",
     "dotenv": "^6.x.x",
     "faker": "^4.x.x",
     "fetch-cookie": "^0.x.x",
@@ -22,8 +22,8 @@
     "jest": "^23.x.x",
     "node-fetch": "^2.x.x",
     "nodemon": "^1.x.x",
-    "prettier": "^1.13.7",
-    "rimraf": "^2.6.2",
+    "prettier": "^1.x.x",
+    "rimraf": "^2.x.x",
     "start-server-and-test": "^1.x.x",
     "ts-jest": "^22.x.x",
     "ts-node": "6.x.x",
@@ -39,12 +39,12 @@
     "argon2": "^0.x.x",
     "cookie-parser": "^1.x.x",
     "date-fns": "^1.x.x",
-    "env": "^0.0.2",
+    "env": "^0.x.x",
     "graphql-yoga": "^1.x.x",
     "jsonwebtoken": "^8.x.x",
     "lodash": "^4.x.x",
     "merge-graphql-schemas": "^1.x.x",
-    "morgan": "^1.9.0",
+    "morgan": "^1.x.x",
     "ms": "^2.x.x",
     "path": "^0.x.x",
     "pg": "^7.x.x",
@@ -60,7 +60,7 @@
     "test-watch": "NODE_ENV=test jest --watchAll --runInBand",
     "lint": "tslint -p .",
     "lint-fix": "tslint -p . --fix",
-    "style-format": "prettier --list-different src/**/*",
+    "style-format": "prettier --list-different \"src/**/*.ts\"",
     "build": "rimraf ./dist && tsc --noImplicitAny false && copyfiles -u 1 src/**/*.graphql dist",
     "test-cli": "start-server-and-test start-test http://localhost:4000 test"
   },
