--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "start-test": "NODE_ENV=test nodemon --exec ts-node src/index.ts",
     "schema-types": "gql-gen --schema http://localhost:4000 --template graphql-codegen-typescript-template --out ./src/types/schemas/index.d.ts \"./src/**/*.graphql\"",
     "test": "NODE_ENV=test jest",
-    "test-watch": "NODE_ENV=test jest --watchAll --runInBand",
+    "test-watch": "NODE_ENV=test jest --watchAll",
     "lint": "tslint -p .",
     "lint-fix": "tslint -p . --fix",
     "style-format": "prettier --list-different \"src/**/*.ts\"",
