--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "test-watch": "NODE_ENV=test jest --watchAll",
     "lint": "tslint -p .",
     "lint-fix": "tslint -p . --fix",
-    "style-format": "prettier --list-different \"src/**/*.ts\"",
+    "style": "prettier --list-different --single-quote \"src/**/*.ts\"",
+    "style-fix": "prettier --write --single-quote \"src/**/*.ts\"",
     "build": "rimraf ./dist && tsc --noImplicitAny false && copyfiles -u 1 src/**/*.graphql dist",
     "test-cli": "start-server-and-test start-test http://localhost:4000 test",
     "seeddb": "ts-node seeddb.ts"
@@ -87,7 +88,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run lint"
+      "pre-commit": "yarn run lint && yarn run style"
     }
   }
 }
