--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
       "controllers/*": ["controllers/*"]
     }
   },
-  "exclude": ["./node_modules", "**/*.spec.ts"]
+  "exclude": ["./node_modules", "**/*.spec.ts", "./seeddb.ts"]
 }
