--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,17 @@
-# Use postgres/example user/password credentials
-version: '3.1'
+version: "3.1"
 
 services:
-
   db:
     image: postgres:latest
     restart: always
-    ports: 
-        - "5432:5432"
+    ports:
+      - "5432:5432"
     environment:
-        POSTGRES_USER: admin
-        POSTGRES_PASSWORD: test123
-        POSTGRES_DB: users
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: test123
+      POSTGRES_DB: users
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+volumes:
+  db-data:
