--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "schemas/*": ["types/schemas/*"],
       "helpers/*": ["helpers/*"],
       "controllers/*": ["controllers/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "exclude": ["./node_modules", "**/*.spec.ts", "./seeddb.ts"]
 }
