--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/morgan": "^1.x.x",
     "@types/ms": "^0.x.x",
     "@types/node": "^8.x.x",
+    "apollo-client": "^2.4.0",
     "axios": "^0.x.x",
     "copyfiles": "^2.x.x",
     "dotenv": "^6.x.x",
@@ -34,6 +35,7 @@
     "graphql": "^0.x.x",
     "graphql-code-generator": "^0.x.x",
     "graphql-codegen-typescript-template": "^0.x.x",
+    "graphql-tag": "^2.9.2",
     "husky": "^1.0.0-rc.9",
     "jest": "^23.x.x",
     "node-fetch": "^2.x.x",
@@ -45,7 +47,8 @@
     "ts-node": "6.x.x",
     "tslint": "^5.x.x",
     "tslint-config-prettier": "^1.x.x",
-    "typescript": "3.x.x"
+    "typescript": "3.x.x",
+    "ws": "^6.0.0"
   },
   "dependencies": {
     "@types/cookie-parser": "^1.x.x",
