--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
     "start-prod": "node ./src/index",
     "start-test": "NODE_ENV=test nodemon --exec ts-node src/index.ts",
     "schema-types": "gql-gen --schema http://localhost:4000 --template graphql-codegen-typescript-template --out ./src/types/schemas/index.d.ts \"./src/**/*.graphql\"",
-    "test": "NODE_ENV=test jest",
-    "test-watch": "NODE_ENV=test jest --watchAll",
+    "test": "NODE_ENV=test jest -i",
+    "test-watch": "NODE_ENV=test jest --watchAll -i",
     "lint": "tslint -p .",
     "lint-fix": "tslint -p . --fix",
     "style": "prettier --list-different --single-quote \"src/**/*.ts\"",
