--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/ms": "0.7.30",
     "@types/node": "8.10.29",
     "axios": "0.18.0",
+    "codecov": "^3.1.0",
     "copyfiles": "2.1.0",
     "dotenv": "6.0.0",
     "faker": "4.1.0",
@@ -73,14 +74,15 @@
     "start-prod": "node ./src/index",
     "start-test": "NODE_ENV=test nodemon --exec ts-node src/index.ts",
     "schema-types": "gql-gen --schema http://localhost:4000 --template graphql-codegen-typescript-template --out ./src/types/schemas/index.d.ts \"./src/**/*.graphql\"",
-    "test": "NODE_ENV=test jest -i --coverage --detectOpenHandles",
+    "test": "NODE_ENV=test jest -i",
+    "test-cov": "NODE_ENV=test jest -i --detectOpenHandles && codecov",
     "test-watch": "NODE_ENV=test jest --watchAll -i",
     "lint": "tslint -p .",
     "lint-fix": "tslint -p . --fix",
     "style": "prettier --list-different --single-quote \"src/**/*.ts\"",
     "style-fix": "prettier --write --single-quote \"src/**/*.ts\"",
     "build": "rimraf ./dist && tsc --noImplicitAny false && copyfiles -u 1 src/**/*.graphql dist",
-    "test-cli": "start-server-and-test start-test http://localhost:4000 test",
+    "test-cli": "start-server-and-test start-test http://localhost:4000 test-cov",
     "seeddb": "ts-node seeddb.ts"
   },
   "jest": {
@@ -98,7 +100,9 @@
       "json",
       "node"
     ],
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   },
   "nodemonConfig": {
     "ignore": [
