--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "faker": "4.1.0",
     "fetch-cookie": "0.7.2",
     "graphql": "0.13.2",
-    "graphql-code-generator": "0.11.0",
+    "graphql-code-generator": "0.12.6",
     "graphql-codegen-typescript-template": "0.12.6",
-    "husky": "1.0.0-rc.13",
+    "husky": "1.0.1",
     "jest": "23.6.0",
     "node-fetch": "2.2.0",
     "nodemon": "1.18.4",
     "prettier": "1.14.3",
     "rimraf": "2.6.2",
     "start-server-and-test": "1.7.1",
-    "ts-jest": "22.4.6",
+    "ts-jest": "23.10.2",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
@@ -61,7 +61,7 @@
     "graphql-yoga": "1.16.2",
     "jsonwebtoken": "8.3.0",
     "lodash": "4.17.11",
-    "merge-graphql-schemas": "1.5.3",
+    "merge-graphql-schemas": "1.5.7",
     "morgan": "1.9.1",
     "ms": "2.1.1",
     "path": "0.12.7",
@@ -75,7 +75,7 @@
     "start-test": "NODE_ENV=test nodemon --exec ts-node src/index.ts",
     "schema-types": "gql-gen --schema http://localhost:4000 --template graphql-codegen-typescript-template --out ./src/types/schemas/index.d.ts \"./src/**/*.graphql\"",
     "test": "NODE_ENV=test jest -i",
-    "test-cov": "NODE_ENV=test jest -i --detectOpenHandles && codecov",
+    "test-cov": "NODE_ENV=test jest -i --coverage && codecov",
     "test-watch": "NODE_ENV=test jest --watchAll -i",
     "lint": "tslint -p .",
     "lint-fix": "tslint -p . --fix",
@@ -101,8 +101,7 @@
       "node"
     ],
     "testEnvironment": "node",
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true
+    "coverageDirectory": "./coverage/"
   },
   "nodemonConfig": {
     "ignore": [
